2010-08-14  Robert Millan  <rmh@gnu.org>

	* kern/emu/misc.c (grub_find_zpool_from_dir): Abort function if
	filesystem is not ZFS.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix for misspelled color names defaulting to black/black (bug
	reported by Doug Nazar)

	* include/grub/normal.h (grub_parse_color_name_pair): Add return
	status to prototype.
	* normal/color.c (grub_parse_color_name_pair): Return failure
	status.
	(grub_env_write_color_normal): Ignore bad color names.
	(grub_env_write_color_highlight): Likewise.
	* normal/main.c (GRUB_MOD_INIT): Set default color names.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	"shift" command support to GRUB script.

	* include/grub/script_sh.h (grub_script_shift): New prototype.
	* script/execute.c (grub_script_shift): New function.
	* script/main.c (grub_script_init): Register shift command.
	(grub_script_fini): Unregister shift command.
	* util/grub-script-check.c (grub_script_cmd_shift): New function.

	* tests/grub_script_shift.in: New testcase.
	* conf/tests.rmk: Rules for new testcase.

2010-08-12  BVK Chaitanya  <bvk.groups@gmail.com>

	"continue" command support to GRUB script.

	* script/execute.c (grub_script_execute_cmdwhile): Continue support.
	(grub_script_break): Continue support.
	* script/main.c (grub_script_init): Register continue command.
	(grub_script_fini): Unregister continue command.

	* tests/grub_script_continue.in: New testcase.
	* conf/tests.rmk: Rules for new testcase.

2010-08-12  BVK Chaitanya  <bvk@dbook>

	"break" command support to GRUB script.

	* conf/common.rmk: Rule updates to grub-script-check.
	* include/grub/misc.h (grub_min): New function.
	* include/grub/script_sh.h (grub_script_init): New prototype.
	(grub_script_fini): New prototype.
	(grub_script_break): New prototype.
	* script/main.c (grub_script_init): New function.
	(grub_script_fini): New function.
	* script/execute.c (grub_script_break): New function.
	* normal/main.c: Calls to grub_script_{init,fini}.